# rust_rag

./: .gitignore  CHAT_API_DOCS.md  Cargo.toml  FRONTEND_API_DOCS.md  QUICK_INTEGRATION_GUIDE.md  README.md  test_chat_api.py
migrations/: 001_create_rag_tables.sql
src/: errors.rs  main.rs
src/db/: mod.rs  models.rs  queries.rs
src/routes/: chat.rs  chatbot.rs  knowledge.rs  mod.rs  query.rs
src/services/: candle_embedding.rs  elasticsearch.rs  embedding.rs  gemini.rs  mod.rs
src/utils/: config.rs  mod.rs  pdf.rs
