[package]
name = "RAG_Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros", "multipart", "ws"] }
candle-core = "0.8.0"
candle-nn = "0.8.0"
candle-transformers = "0.8.0"
candle-datasets = "0.8.0"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
pdf-extract = "0.10.0"
elasticsearch = "8.5.0-alpha.1"
url = "2.5.0"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokenizers = "0.21.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio-stream = "0.1.14"
futures-util = "0.3.30"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tower-http = { version = "0.6.0", features = ["cors"] }
